--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
   "scripts": {
     "lint": "npx eslint . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "prettier": "npx prettier --write ."
+    "prettier": "npx prettier --write .",
+    "test": "jest"
   },
   "devDependencies": {
+    "@relmify/jest-fp-ts": "^2.0.2",
     "@types/node": "^18.7.8",
     "eslint": "^8.23.0",
+    "io-ts": "^2.2.17",
+    "jest": "^29.0.1",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
